# LLM-Reasoning-On-Minesweeper-Puzzles

./: .gitignore  README.md  pyproject.toml  writeup.md
llm_runner/: __init__.py  local_eval.py
minesweeper/: __init__.py  __main__.py  board.py  dataset.py  evaluate.py  generator.py  play.py  pygame_ui.py  session_report.py  solver.py  text.py  variants.py
