[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minesweeper-llm-project"
version = "0.1.0"
description = "Deterministic Minesweeper engine for LLM reasoning experiments"
requires-python = ">=3.10"
dependencies = [
	"torch>=2.2",
]

[project.optional-dependencies]
llm = [
	"openai>=1.30",
	"anthropic>=0.45",
]
pygame = [
	"pygame>=2.5",
]
all = [
	"openai>=1.30",
	"anthropic>=0.45",
	"pygame>=2.5",
]

[tool.setuptools]
packages = ["minesweeper", "llm_runner"]
